--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.10.0 twine virtualenv
 
-      - name: Build wheels
+      - name: Build wheels and publish
         run: |
             python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
