--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-10.15]
+        os: [macOS-10.15, windows-2019]
         # os: [ubuntu-20.04, windows-2019, macOS-10.15]
-        python-version: [3.8]
+        python-version: [3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
 
@@ -20,15 +20,13 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.10.0 twine virtualenv
 
-      - name: Build wheels and publish
+      - name: Build wheels
         run: |
             python -m cibuildwheel --output-dir wheelhouse
-        # to supply options, put them in 'env', like:
-        
       - uses: actions/upload-artifact@v2
         with:
           path: ./wheelhouse/*.whl
-      - name: upload wheel
+      - name: Upload wheels
         env:
             TWINE_USERNAME: __token__
             TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
