--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,10 +19,11 @@ jobs:
       - uses: actions/setup-python@v2
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==1.10.0 twine virtualenv
+        run: python -m pip install cibuildwheel==1.10.0 twine virtualenv numpy cyton
 
       - name: Build wheels
         run: |
+            python setup.py build_ext
             python -m cibuildwheel --output-dir wheelhouse
       - uses: actions/upload-artifact@v2
         with:
