--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-python@v2
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==1.10.0 twine virtualenv numpy cyton
+        run: python -m pip install cibuildwheel==1.10.0 twine virtualenv numpy cython
 
       - name: Build wheels
         run: |
