--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
+include data *
 recursive-include SDIF *
 prune SDIF/build 
 prune SDIF/test
-print SDIF/doc
+prune SDIF/doc
 recursive-exclude SDIF *.cache 
