--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,32 +8,33 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-10.15, windows-2019]
+        os: [macOS-10.15, windows-latest, ubuntu-latest]
         # os: [windows-2019]
         # os: [ubuntu-20.04, windows-2019, macOS-10.15]
-        python-version: [3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
 
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v2
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==1.10.0 twine virtualenv numpy cython
-
       - name: Build wheels
-        run: |
-            # python setup.py build_ext
-            python -m cibuildwheel --output-dir wheelhouse
-      - uses: actions/upload-artifact@v2
+        uses: pypa/cibuildwheel@v2.11.3
+        # to supply options, put them in 'env', like:
+        env:
+            CIBW_BUILD: 'cp39-* cp10-* cp11-*'
+            CIBW_SKIP: 'pp* *686* *-musllinux_*'
+            
+            # CIBW_SOME_OPTION: value
+  
+      - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
       - name: Upload wheels
         env:
-            TWINE_USERNAME: __token__
+            # TWINE_USERNAME: __token__
+            TWINE_USERNAME: Eduardo.Moguillansky
             TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
             echo $TWINE_USERNAME
             echo $TWINE_PASSWORD
+            python -m pip install -U twine virtualenv
             twine upload --skip-existing wheelhouse/*.whl
         continue-on-error: true
+        
