--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,15 +12,26 @@ jobs:
         # os: [windows-2019]
         # os: [ubuntu-20.04, windows-2019, macOS-10.15]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install -U twine
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.11.3
+        uses: pypa/cibuildwheel@v2.12.0
         # to supply options, put them in 'env', like:
         env:
             CIBW_BUILD: 'cp39-* cp10-* cp11-*'
-            CIBW_SKIP: 'pp* *686* *-musllinux_*'
+            CIBW_ARCHS_MACOS:"x86_64 arm64"
             
+            # CIBW_SKIP: 'pp* *686* *-musllinux_*'
             # CIBW_SOME_OPTION: value
   
       - uses: actions/upload-artifact@v3
