--- a/SDIF/test/CMakeLists.txt
+++ b/SDIF/test/CMakeLists.txt
@@ -7,17 +7,23 @@
 #
 # created by Axel Roebel                     7.12.2006
 
+IF(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" OR CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
+  SET(MLIB)
+ELSE(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" OR CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
+  SET(MLIB m)
+ENDIF(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" OR CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
+
 ADD_EXECUTABLE(headerTest${DEBUGEXT} test1.c utils.c)
-TARGET_LINK_LIBRARIES(headerTest${DEBUGEXT} sdif${DEBUGEXT} m)
+TARGET_LINK_LIBRARIES(headerTest${DEBUGEXT} sdif${DEBUGEXT} ${MLIB})
 
 ADD_EXECUTABLE(NVTtest${DEBUGEXT} test2.c utils.c)
-TARGET_LINK_LIBRARIES(NVTtest${DEBUGEXT} sdif${DEBUGEXT} m)
+TARGET_LINK_LIBRARIES(NVTtest${DEBUGEXT} sdif${DEBUGEXT} ${MLIB})
 
 ADD_EXECUTABLE(testcheck${DEBUGEXT} testcheck.c)
-TARGET_LINK_LIBRARIES(testcheck${DEBUGEXT} sdif${DEBUGEXT} m)
+TARGET_LINK_LIBRARIES(testcheck${DEBUGEXT} sdif${DEBUGEXT} ${MLIB})
 
 ADD_EXECUTABLE(testselect${DEBUGEXT} testselect.c)
-TARGET_LINK_LIBRARIES(testselect${DEBUGEXT} sdif${DEBUGEXT} m)
+TARGET_LINK_LIBRARIES(testselect${DEBUGEXT} sdif${DEBUGEXT} ${MLIB})
 
 
 SET(SDIFTYPES	  ${CMAKE_CURRENT_SOURCE_DIR}/../data/SdifTypes.STYP )
