--- a/SDIF/tools/CMakeLists.txt
+++ b/SDIF/tools/CMakeLists.txt
@@ -10,11 +10,11 @@
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../sdif)
 
-IF(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" )
+IF(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" OR CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
   SET(MLIB)
-ELSE(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" )
+ELSE(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" OR CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
   SET(MLIB m)
-ENDIF(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" )
+ENDIF(MSVC  OR CMAKE_CXX_COMPILER_ID STREQUAL "Intel" OR CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
 
 ADD_EXECUTABLE(querysdif${DEBUGEXT} querysdif.c)
 TARGET_LINK_LIBRARIES(querysdif${DEBUGEXT} sdif${DEBUGEXT} ${MLIB})
