--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/setup-python@v2
+      
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.12.0
         # to supply options, put them in 'env', like:
