--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -20,7 +20,7 @@ jobs:
         # to supply options, put them in 'env', like:
         env:
             CIBW_BUILD: 'cp39-* cp310-* cp311-*'
-            CIBW_ARCHS_MACOS: 'x86_64'            
+            CIBW_ARCHS_MACOS: 'x86_64 arm64'            
             CIBW_SKIP: 'pp* *686* *-musllinux_*'
             # CIBW_SOME_OPTION: value
   
