--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -9,13 +9,15 @@ version: 2
 # formats:
 #    - pdf
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
 python:
-  version: 3.10
   install:
   - requirements: docs/requirements.txt
   # setup_py_install: true
-
-version: 2
 
 mkdocs:
   configuration: mkdocs.yml
