--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-10.15, windows-latest, ubuntu-latest]
+        os: [macos-latest, windows-latest, ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -19,7 +19,7 @@ jobs:
         uses: pypa/cibuildwheel@v2.12.0
         # to supply options, put them in 'env', like:
         env:
-            CIBW_BUILD: 'cp39-* cp310-* cp311-*'
+            CIBW_BUILD: 'cp39-* cp310-* cp311-* cp312-*'
             CIBW_ARCHS_MACOS: 'x86_64 arm64'            
             CIBW_SKIP: 'pp* *686* *-musllinux_*'
             # CIBW_SOME_OPTION: value
