add docs about sdifinfo

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
     - index.md
     - reference.md
     - tools.md
+    - sdifinfo.md
     - classes:
         - classes/SdifFile.md
         - classes/FrameR.md
