--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -14,19 +14,22 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v3
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel
       
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.16.2
-        # to supply options, put them in 'env', like:
+        run: python -m cibuildwheel --output-dir wheelhouse
         env:
             CIBW_BUILD: 'cp39-* cp310-* cp311-* cp312-*'
             CIBW_ARCHS_MACOS: 'x86_64 arm64'            
             CIBW_SKIP: 'pp* *686* *-musllinux_*'
             # CIBW_SOME_OPTION: value
   
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           path: ./wheelhouse/*.whl
+          
       - name: Upload wheels
         env:
             TWINE_USERNAME: __token__
